Add home button, clean authors

--- a/root/_config.yml
+++ b/root/_config.yml
@@ -37,7 +37,7 @@ defaults:
     scope:
       path: ""
     values:
-      logo: null
+      logo: 'assets/images/home.svg'
 
 
 # Settings for builing master branch with travis-ci
