--- a/root/_data/authors.yml
+++ b/root/_data/authors.yml
@@ -4,5 +4,5 @@ dominik:
   location: Poznań, Poland
   url_full: https://dominikbrandon.com
   url: dominikbrandon.com
-  bio: todo
+  bio: A humble software engineer that's always trying to leave the code better than it was before.
   assets: assets/images/dominik.png
