Add background covers

--- a/root/_config.yml
+++ b/root/_config.yml
@@ -7,7 +7,7 @@ paginate: 5
 language: 'en-uk'
 
 # Website info
-name: 'Dominik Grzelak'
+name: "Dominik B. Grzelak"
 description: "Welcome to my blog. Tbh I'm not yet sure what I'm gonna post here. Most likely expect some thoughts on <strong>creating software</strong>. My thoughts are obviously <em>strictly subjective</em> and you may not agree with them. In that case I'll be happy to get to know your perspective - please feel invited to share your thoughts in the comments. I'll respond for sure!"
 
 short_url: 'jekyllt.github.io/jasper/'
