Use Github Actions deployment way

--- a/root/_config.yml
+++ b/root/_config.yml
@@ -14,7 +14,7 @@ url: "https://dominikbrandon.com"
 short_url: 'jekyllt.github.io/jasper/'
 disqus: username
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /
+baseurl: '/'
 
 # Permalinks
 permalink: /:title
