Fix baseurl after moving to deployments with Github Actions

--- a/root/_data/authors.yml
+++ b/root/_data/authors.yml
@@ -5,4 +5,4 @@ dominik:
   url_full: https://dominikbrandon.com
   url: dominikbrandon.com
   bio: A humble software engineer that's always trying to leave the code better than it was before.
-  assets: assets/images/dominik.webp
+  assets: /assets/images/dominik.webp
