Second attempt to deployment with Github Actions but using bundler

--- a/root/_config.yml
+++ b/root/_config.yml
@@ -13,8 +13,7 @@ url: "https://dominikbrandon.com"
 
 short_url: 'jekyllt.github.io/jasper/'
 disqus: username
-# edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /
+baseurl: ''
 
 # Permalinks
 permalink: /:title
@@ -37,7 +36,7 @@ defaults:
     scope:
       path: ""
     values:
-      logo: 'assets/images/home.svg'
+      logo: '/assets/images/home.svg'
 
 
 # Settings for builing master branch with travis-ci
